change add item button text

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 		<main id="main">
 			
 			<input type="text" name="items" id="input" placeholder="Enter items">
-			<button id="button">Send it</button>
+			<button id="button">Add item</button>
 			<ol>
 
 			</ol>
 		
 		</main>
-		<script type="text/javascript" src="input_game.js"></script>
+		<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
