add reset button

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	    <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>JavaScript Practice</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
@@ -11,13 +12,10 @@
 		<h2>Hi, shopping lover!</h2>
 		<p>Create your own shopping list </p>
 		<main id="main">
-			
 			<input type="text" name="items" id="input" placeholder="Enter items">
 			<button id="button">Add item</button>
-			<ol>
-
-			</ol>
-		
+			<button id="reset">Clear list</button>
+			<ol></ol>
 		</main>
 		<script type="text/javascript" src="script.js"></script>
 	</body>
